salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/fields/DeletedBy__c.field-meta.xml
<CustomField>
    <fullName>DeletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the soft delete (merge operation)</description>
    <label>Deleted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deleted_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>