salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/fields/DeletedDate__c.field-meta.xml
<CustomField>
    <fullName>DeletedDate__c</fullName>
    <description>Date and time when customer was soft deleted</description>
    <label>Deleted Date</label>
    <type>DateTime</type>
</CustomField>