salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if customer is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>