salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if customer has been soft deleted (merged)</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>