salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/fields/MergedInto__c.field-meta.xml
<CustomField>
    <fullName>MergedInto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the customer this record was merged into</description>
    <label>Merged Into</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Merged From Customers</relationshipLabel>
    <relationshipName>Merged_From_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>