salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer phone number</description>
    <label>Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>