salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/fields/SignupDate__c.field-meta.xml
<CustomField>
    <fullName>SignupDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when customer signed up</description>
    <label>Signup Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>