salesforce/shopnow-deduplication/force-app/main/default/objects/Customer__c/validationRules/Soft_Delete_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Soft_Delete_Validation</fullName>
    <active>true</active>
    <description>Ensures deleted customers have required audit fields populated</description>
    <errorConditionFormula>
        AND(
            IsDeleted__c = true,
            OR(
                ISBLANK(DeletedDate__c),
                ISBLANK(DeletedBy__c),
                ISBLANK(MergedInto__c)
            )
        )
    </errorConditionFormula>
    <errorMessage>Deleted customers must have Deleted Date, Deleted By, and Merged Into fields populated.</errorMessage>
</ValidationRule>